force-app/main/default/objects/OCR_Calender__c/OCR_Calender__c.object-meta.xml
<CustomObject>
    <description>This object is created for storing the OCR calendar which is different from NSC calendar. This object will be used to calculate some fields which are required in extract file which we will send to OCR team.</description>
    <label>OCR Calender</label>
    <nameField>
        <label>OCR Calender Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCR Calenders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>