force-app/main/default/objects/OCR_Calender__c/fields/Accounting_Peroid__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Peroid__c</fullName>
    <label>Accounting Peroid</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>