force-app/main/default/objects/OCR_Calender__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>This field stores the date of OCR Calendar in the format mm/dd/yy</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>