force-app/main/default/objects/OCR_Calender__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <length>9</length>
    <type>Text</type>
</CustomField>