force-app/main/default/objects/OCR_Calender__c/fields/Month_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Month_Week_Number__c</fullName>
    <label>Month Week Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>