force-app/main/default/objects/OCR_Calender__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <formula>Quarter__c + TEXT(Quarter_Week_Number__c) + RIGHT(TEXT(Year__c),2)</formula>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>