force-app/main/default/objects/OCR_Calender__c/fields/Year_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Year_Week_Number__c</fullName>
    <label>Year Week Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>